updated readToJson method, added method to return a book